--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 appdirs==1.4.0
+arrow==0.10.0
 attrs==16.2.0
 cffi==1.8.3
 chromedriver-installer==0.0.4
 click==6.6
 constantly==15.1.0
+convertdate==2.1.0
 cryptography==1.5.2
 cssselect==1.0.0
+ephem==3.7.6.0
 Flask==0.11.1
 future==0.16.0
 httpie==0.9.9
 idna==2.1
 incremental==16.10.1
 itsdangerous==0.24
+jdatetime==1.8.1
 Jinja2==2.8
 lxml==3.6.4
 MarkupSafe==0.23
@@ -26,11 +30,15 @@ Pygments==2.1.3
 pygobject==3.22.0
 pyOpenSSL==16.2.0
 pyparsing==2.1.10
+python-dateutil==2.6.0
 python-twitter==3.2
+pytz==2016.10
 pyxdg==0.25
 queuelib==1.4.2
+regex==2016.12.27
 requests==2.12.4
 requests-oauthlib==0.7.0
+ruamel.yaml==0.13.7
 Scrapy==1.2.1
 selenium==2.53.6
 service-identity==16.0.0
@@ -38,6 +46,8 @@ six==1.10.0
 team==1.0
 Twisted==16.5.0
 twitter==1.17.1
+tzlocal==1.3
+umalqurra==0.2
 w3lib==1.15.0
 Werkzeug==0.11.11
 zope.interface==4.3.2
