--- a/Pipfile
+++ b/Pipfile
@@ -5,21 +5,9 @@ name = "pypi"
 
 [packages]
 arrow = "==0.10.0"
-click = "==6.7"
-future = "==0.16.0"
-httpie = "==0.9.9"
-itsdangerous = "==0.24"
-oauthlib = "==2.0.1"
-python-dateutil = "==2.6.0"
 python-twitter = "==3.2.1"
-requests = "==2.12.5"
-requests-oauthlib = "==0.7.0"
-six = "==1.10.0"
 Flask = "==0.12"
-"Jinja2" = "==2.9.4"
-MarkupSafe = "==0.23"
-Pygments = "==2.1.3"
-Werkzeug = "==0.11.15"
+pytest = "*"
 
 [dev-packages]
 
