--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -23,24 +23,14 @@ jobs:
           paths:
             - ./venv
 
+  test:
+    steps:
       - run:
           name: run tests
           command: |
             python3 -m venv venv
             source venv/bin/activate
-            pytest
-
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-      - run:
-         name: Build Docker image
-         command: docker build -t mlabouardy/movies-store:$CIRCLE_SHA1 .
+            py.test -vv ./tests/
 
       - store_artifacts:
           path: test-reports
