--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -24,17 +24,8 @@ jobs:
             - ./venv
 
   test:
-    steps:
-      - run:
-          name: run tests
-          command: |
-            python3 -m venv venv
-            source venv/bin/activate
-            py.test -vv ./tests/
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
+    override:
+      - py.test -vv ./tests/
 
   deploy:
     - steps:
