--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6
+      - image: python:3.6
 
     steps:
       - checkout
@@ -17,18 +17,18 @@ jobs:
           name: install dependencies
           command: |
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
             pip install -r requirements.txt
 
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - ./venv
+            - "venv"
 
       - run:
           name: run tests
           command: |
-            source venv/bin/activate
+            . venv/bin/activate
             py.test -vv --junitxml=test-reports/output.xml
 
       - store_artifacts:
