--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -24,7 +24,9 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - "venv"
-
+  test:
+    steps:
+      - cd ~/promofinder-backend/
       - run:
           name: run tests
           command: |
