fix: Write wrong command in step job

--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -28,7 +28,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            py.test -vv --junitxml=test-reports/output.xml
+            comando-errado
 
       - store_artifacts:
           path: test-reports/
