fix: Uncomment code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,10 @@ jobs:
       - store_test_results:
           path: /reports
 
-          #
-          #      - run:
-          #        name: Deploy Heroku
-          #        command: |
-          #          heroku maintenance:on --app $HEROKU_APP_NAME
-          #          git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-          #          heroku restart --app $HEROKU_APP_NAME
-          #          heroku maintenance:off --app HEROKU_APP_NAME
+      - run:
+          name: Deploy Heroku
+          command: |
+            heroku maintenance:on --app $HEROKU_APP_NAME
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+            heroku restart --app $HEROKU_APP_NAME
+            heroku maintenance:off --app HEROKU_APP_NAME
